<resources>
    <string name="app_name">SistemaAlumnos</string>
    <string name="action_settings">Settings</string>

    <!-- Login -->
    <string name="login_system_title">Sistema Integral de Escolar</string>
    <string name="login_system_subtitle">Tecnológico Nacional de México</string>
    <string name="login_logo_desc">Logotipo del sistema</string>
    <string name="login_label_id">No. de Identificación</string>
    <string name="login_hint_id">Ingresa tu número de identificación</string>
    <string name="login_btn_sie">Ingresar a SIE</string>
    <string name="login_footer">© Tecnológico Nacional de México · SIE</string>

    <!-- Pantalla Alumnos -->
    <string name="alumnos_title">Datos del Alumno</string>
    <string name="alumnos_section_datos">INFORMACIÓN PERSONAL</string>
    <string name="alumnos_section_materias">MATERIAS Y CALIFICACIONES</string>
    <string name="alumnos_label_control">NO. DE CONTROL</string>
    <string name="alumnos_hint_control">Ej. 22050001</string>
    <string name="alumnos_label_nombre">NOMBRE COMPLETO</string>
    <string name="alumnos_hint_nombre">Apellido Paterno Materno, Nombre(s)</string>
    <string name="alumnos_label_telefono">NÚMERO DE TELÉFONO</string>
    <string name="alumnos_hint_telefono">10 dígitos</string>
    <string name="alumnos_col_materia">MATERIA</string>
    <string name="alumnos_col_calificacion">CALIF.</string>
    <string name="alumnos_hint_materia">Materia</string>
    <string name="alumnos_hint_calificacion">0 – 100</string>
    <string name="alumnos_promedio">PROMEDIO GENERAL</string>

    <!-- Pantalla Docentes -->
    <string name="docentes_title">Datos del Docente</string>
    <string name="docentes_section_datos">INFORMACIÓN DEL DOCENTE</string>
    <string name="docentes_section_materias">MATERIAS POR ALUMNO</string>
    <string name="docentes_label_no_empleado">NO. DE EMPLEADO</string>
    <string name="docentes_hint_no_empleado">Ej. EMP-00123</string>
    <string name="docentes_label_nombre">NOMBRE COMPLETO</string>
    <string name="docentes_hint_nombre">Apellido Paterno Materno, Nombre(s)</string>
    <string name="docentes_label_direccion">DIRECCIÓN</string>
    <string name="docentes_hint_direccion">Calle, Colonia, Ciudad</string>
    <string name="docentes_label_alumno">SELECCIONAR ALUMNO</string>
    <string name="docentes_hint_alumno">Buscar alumno…</string>
    <string name="docentes_col_materia">MATERIA</string>
    <string name="docentes_col_calificacion">CALIF.</string>
    <string name="docentes_col_accion">ACCIÓN</string>
    <string name="docentes_btn_asignar">Asignar</string>

    <!-- Pantalla Administrador -->
    <string name="admin_title">Panel de Administrador</string>
    <string name="admin_bienvenida">Panel de Control</string>
    <string name="admin_bienvenida_sub">Gestión de alumnos, docentes y materias</string>
    <string name="admin_section_alumnos">ALUMNOS</string>
    <string name="admin_section_docentes">DOCENTES</string>
    <string name="admin_section_materias">MATERIAS</string>
    <string name="admin_btn_alta">Alta</string>
    <string name="admin_btn_ver">Visualizar</string>
    <string name="admin_btn_editar">Editar</string>
    <string name="admin_btn_eliminar">Eliminar</string>


    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
</resources>